# CodeSkeptic

./: .gitignore  CMakeLists.txt  CONTRACTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  TYPESTATE_FEASIBILITY.md  action.yml  analiz-2026-07.md  architecture.txt  build_tail.txt  changelog.md  configure_tail.txt  ctest_failed_tail.txt  juliet-output.tail.txt  libgit2-findings.txt  probe.utf8.txt  probe_result.txt  progress.md  results.txt  ros_dirs.txt  ros_results.txt  rtp2httpd-findings.txt  smoke_out.txt  steps.txt  todo.md
.github/ISSUE_TEMPLATE/: bug-report.md  evaluation-report.yml  false-positive.md  false-positive.yml
.github/actions/setup-msvc-llvm/: action.yml
.github/workflows/: action-selftest.yml  ci.yml  docker.yml  docs.yml  housekeeping.yml  juliet.yml  realworld.yml  release.yml  windows.yml  wsl-smoke.yml
corpus-work/: cjson.tgz
docs/: PLAN-f7a.md  PLAN-v0.4.md  benchmarks.md  comparison.md  custom.c  demo.c  engine.md  evaluate.md  integrations.md  reproduce.md  token-ablation.md  untrusted-length.md  usage.md  windows-support.md
docs/devlog/: README.md  ROADMAP-full.md  changelog.md
inspect/: lg2-hash-files.txt  rtp-http_chunked_decoder.c  rtp-http_proxy_rewrite.c  rtp-service.c  rtp-timezone.c  rtp2httpd-head.txt
profiles/: README.md  carbon.conf  fprime.conf  imgui.conf  joltphysics.conf  libgit2.conf  reactos.conf  redis.conf  systemd.conf
scripts/: analyze_diff.sh  check_profiles.sh  check_readme.sh  corpus_expected.txt  juliet_eval.py  juliet_expected.txt  package_release.sh  review_diff.sh  review_report.py  run_corpus.sh  run_juliet.sh  run_thesis.sh  test_review_diff.sh  token_ablation.py  token_ablation_live.py
src/: CMakeLists.txt  main.cpp
src/analyzer/: Baseline.cpp  Baseline.h  StaticAnalyzer.cpp  StaticAnalyzer.h  SuppressionFilter.cpp  SuppressionFilter.h
src/config/: Config.cpp  Config.h
src/contracts/: ContractInfo.cpp  ContractInfo.h  ContractParser.cpp  ContractParser.h  GuardContracts.cpp  GuardContracts.h  Policy.cpp  Policy.h  Sidecar.cpp  Sidecar.h
src/core/: Diagnostic.h  ExitPolicy.h  FunctionFilter.cpp  FunctionFilter.h  Messages.cpp  Messages.h  Rule.h
src/engine/: AllocFunctions.cpp  AllocFunctions.h  AssumptionMode.cpp  AssumptionMode.h  CallRefArgs.h  CfgCache.cpp  CfgCache.h  ConditionWalk.h  CoverageReport.cpp  CoverageReport.h  DataflowEngine.h  ExtentMap.cpp  ExtentMap.h  FatalCalls.cpp  FatalCalls.h  FunctionSummary.cpp  FunctionSummary.h  GuardedDisjuncts.h  ImmutableFlags.cpp  ImmutableFlags.h  Interval.cpp  Interval.h  IntervalAnalysis.h  IntervalEval.cpp  IntervalEval.h  ParamIntervals.cpp  ParamIntervals.h  PathFacts.cpp  PathFacts.h  RuleEngine.cpp  RuleEngine.h  SummaryDiff.cpp  SummaryDiff.h
src/reporter/: ConsoleReporter.cpp  ConsoleReporter.h  HtmlReporter.cpp  HtmlReporter.h  JsonReporter.cpp  JsonReporter.h  Reporter.h  SarifReporter.cpp  SarifReporter.h
src/rules/: AssumptionRule.cpp  AssumptionRule.h  BoundsRule.cpp  BoundsRule.h  ContractRule.cpp  ContractRule.h  DivByZeroRule.cpp  DivByZeroRule.h  IntOverflowRule.cpp  IntOverflowRule.h  MemoryLeakRule.cpp  MemoryLeakRule.h  MemoryLeakRule_Ex.cpp  MemoryLeakRule_Ex.h  NullDerefRule.cpp  NullDerefRule.h  PolicyRule.cpp  PolicyRule.h  UninitPointerRule.cpp  UninitPointerRule.h  UninitPointerRule_Ex.cpp  UninitPointerRule_Ex.h
src/server/: McpServer.cpp  McpServer.h
src/source_manager/: ResourceDir.cpp  ResourceDir.h  SourceManager.cpp  SourceManager.h
tests/: AssumptionRuleTest.cpp  BaselineTest.cpp  BoundsRuleTest.cpp  BrokenTuTest.cpp  CMakeLists.txt  CfgCacheTest.cpp  ContractTest.cpp  CoverageReportTest.cpp  DiagnosticTest.cpp  DisjunctsV2bTest.cpp  DivByZeroRuleTest.cpp  FatalCallsTest.cpp  FunctionFilterTest.cpp  HtmlReporterTest.cpp  IntOverflowRuleTest.cpp  InterproceduralTest.cpp  IntervalAnalysisTest.cpp  IntervalTest.cpp  MacSdkPathTest.cpp  McpServerTest.cpp  MemoryLeakRuleExTest.cpp  MemoryLeakRuleTest.cpp  NullDerefRuleTest.cpp  ParamIntervalsTest.cpp  ReportPathsTest.cpp  ResourceDirTest.cpp  SarifReporterTest.cpp  StressEdgeCaseTest.cpp  SummaryDiffTest.cpp  SuppressionFilterTest.cpp  TestHelper.cpp  TestHelper.h  UninitPointerRuleExTest.cpp  UninitPointerRuleTest.cpp
tests/thesis_corpus/: README.md  alloc_fill.c  array_from_int.c  avg_input.c  cmd_args.c  concat_heap.c  config_parse.c  csv_count.c  dyn_buffer.c  format_bytes.c  int_vector.c  length_prefix.c  list_builder.c  matrix_row_copy.c  mem_pool.c  pixel_buffer.c  port_parse.c  ring_buffer.c  running_product.c  scale_numbers.c  simple_hash.c  strdup_manual.c  temp_convert.c  thesis_expected.txt  tiny_stack.c  tokenize.c
